Bug 520421.  HasAttributeDependentStyle is broken on HTML for cased attribute selectors.  r=dbaron